@@ -23,10 +23,8 @@ public class ItineraryService {
     private final ItineraryRepository itineraryRepository;
     private final TripRepository tripRepository;
 
-    // 여정 다건 등록
     @Transactional
     public List<ItineraryResponse> insertItineraries(Long tripId, List<ItineraryRequest> itineraryRequestList) {
-
         Trip trip = tripRepository.findById(tripId)
                 .orElseThrow(TripNotLoadedException::new);
 
@@ -34,30 +32,30 @@ public class ItineraryService {
                 .map(ItineraryRequest::toEntity)
                 .peek(itinerary -> itinerary.setTrip(trip))
                 .toList();
+
         itineraryRepository.saveAll(itineraries);
 
         return itineraries.stream()
                 .map(ItineraryResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // TripId로 여정 다건 조회
     public List<ItineraryResponse> selectItineraries(Long tripId) {
         return itineraryRepository.findByTripTripId(tripId).stream()
                 .map(ItineraryResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // TripId로 여정 단건 조회
     public ItineraryResponse selectItinerary(Long itineraryId) {
         return itineraryRepository.findById(itineraryId)
                 .map(ItineraryResponse::fromEntity)
                 .orElseThrow(ItineraryNotLoadedException::new);
     }
 
-    // 여정 수정
     @Transactional
     public ItineraryResponse updateItinerary(long id, ItineraryRequest itineraryRequest) {
+        itineraryRequest.toEntity();
+
         return itineraryRepository.findById(id).map(itinerary -> {
             itinerary.modifyInfo(itineraryRequest);
             return ItineraryResponse.fromEntity(itinerary);
